chore(auth): temporarily use Entra ID (aad) login provider

--- a/public/form-config.json
+++ b/public/form-config.json
@@ -3,7 +3,5 @@
   "formEndpoint": "",
   "turnstileSiteKey": "",
   "turnstileVerifyEndpoint": "",
-  "loginProvider": "b2c"
+  "loginProvider": "aad"
 }
-
-
