fix(swa): use navigationFallback + approved role gate to avoid blank page after login

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -3,8 +3,22 @@
     { "route": "/login.html", "allowedRoles": ["anonymous"] },
     { "route": "/unauthorized.html", "allowedRoles": ["anonymous"] },
     { "route": "/api/*", "allowedRoles": ["anonymous"] },
-    { "route": "/*", "rewrite": "/index.html", "allowedRoles": ["approved"] }
+    { "route": "/*", "allowedRoles": ["approved"] }
   ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": [
+      "/api/*",
+      "/login.html",
+      "/unauthorized.html",
+      "/static/*",
+      "/books/*",
+      "/favicon.ico",
+      "/manifest.json",
+      "/logo192.png",
+      "/logo512.png"
+    ]
+  },
   "responseOverrides": {
     "401": { "redirect": "/login.html", "statusCode": 302 },
     "403": { "redirect": "/unauthorized.html", "statusCode": 302 }
