--- a/public/form-config.json
+++ b/public/form-config.json
@@ -3,5 +3,5 @@
   "formEndpoint": "",
   "turnstileSiteKey": "",
   "turnstileVerifyEndpoint": "",
-  "loginProvider": "extid"
+  "loginProvider": "aad"
 }
